<resources>
    <string name="app_name">To-Do List</string>
    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add or Edit a Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This edit task has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Describe your task&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="grey_pencil">grey pencil</string>
    <string name="notebook_image">notebook image</string>
    <string name="empty_view_title_text">Looks like you don\'t have anything to do…</string>
    <string name="empty_view_subtitle_text">…why don\'t you add something?</string>
    <string name="share">Share</string>
    <string name="drag_handle">drag handle</string>
    <string name="sort_order">Sort Order</string>
    <string name="sort_by_priority">Priority</string>
    <string name="sort_by_id">Asc Order</string>

</resources>
