<?xml version="1.0" encoding="utf-8"?><!--
    This layout defines the main activity screen and displays a list of tasks (if they exist),
    and a floating action button that launches another activity.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <!-- RecyclerView that is responsible for holding a list of task data -->
    <com.example.android.todolist.EmptyRecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/main_activity_recyclerview_bottom_padding" />

    <!-- empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/empty_list_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/notebook_image"
            android:src="@drawable/ic_empty_list" />

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/EmptyTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/empty_list_image"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/empty_view_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            style="@style/EmptyTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:paddingTop="@dimen/main_activity_subflavor_text_top_padding"
            android:text="@string/empty_view_subtitle_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </RelativeLayout>

    <!-- Floating action button that launches AddTaskActivity when clicked -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        app:srcCompat="@android:drawable/ic_input_add" />


</FrameLayout>

